Thu Jan 29 11:06:36 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/CDR.inl:
        * tao/CDR.h:
        * TAO_IDL/be/be_visitor_union_branch/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_array/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuebox/valuebox_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/field_cdr_cs.cpp:
        * TAO_IDL/be/be_visitor_field/cdr_op_cs.cpp:

          Removed to_bounded_string and from_bounded_string structs.
          It turned out they are unnecessary.

Thu Jan 29 10:32:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Transport.cpp:
        * tao/Strategies/SCIOP_Transport.cpp:
          Use operator!

Thu Jan 29 09:28:52 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:
          Optimized error logging.

Thu Jan 29 09:05:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:
        * tests/Bug_3559_Regression/check.cpp:
        * tests/Bug_3559_Regression/run_test.pl:
        * tests/Bug_3559_Regression/struct.idl:

          Added this regression test (No fix committed yet).

Thu Jan 29 08:53:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:

          Fixed compiler error on WinCE.

Wed Jan 28 23:18:40 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3559_Regression/Bug_3559_Regression_Test.cpp:

          Fixed #include of lowercase ace.h.

Wed Jan 28 20:22:51 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          These files moved here from $ACE_ROOT/bin, see bug 2748 and the
          ACE ChangeLog entry for Wed Jan 28 20:22:45 UTC 2009.

Wed Jan 28 14:32:17 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Transport_Connector.cpp:

          Fix fuzz errors.
